# llm_coherence

./: .dockerignore  .gitignore  Dockerfile.hf_jobs  LICENSE  README.md  pyproject.toml
data/: README.md
data/01_ladders/: README.md
data/02_category_filtering/: filtered_dataset_config.yaml  options_hierarchical_filtered_phase1.json  phase1_filtering_report.json
data/02_validation/: README.md
data/03_comparisons/: README.md
data/03_outcome_screening/: phase2_filtering_results.json
data/04_ladder_generation/: phase3_variations.json  phase6b_variations.json  phase_3_variations_config.yaml
data/05_ladder_validation/: phase6b_variations_pairtest_pruned.json  phase6b_variations_prop_pruned.json  phase6b_variations_pruned_final.json  phase6b_variations_pruned_final_report.json  phase6b_variations_ranking_pruned.json
data/run_experiments/: comparison_sample.json
docs/: artifact_policy.md  huggingface_artifacts.md  pipeline.md  replication.md  rerun.md
outputs/: README.md
outputs/01_ladders/: README.md
outputs/02_validation/: README.md
outputs/03_comparisons/: README.md
outputs/04_model_runs/: README.md  model_run_index.json
outputs/06_figures_tables/: README.md
outputs/07_model_runs/: model_run_index.json
outputs/glm-45-hybrid/: cost_summary.json  (+1 more)
outputs/glm-45-hybrid-thinking/: cost_summary.json  phase6b_coherence_glm-45-hybrid-thinking.json
results/: README.md  phase6b_coherence_summary.json
scripts/: README.md  prepare_hf_artifact_bundle.py  validate_artifacts.py
src/: config.py
tests/: test_forced_choice_logprobs.py
(+2956 files in other folders)
