[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-coherence"
version = "0.1.0"
description = "Pipeline for LLM preference coherence experiments over parametric ladders."
requires-python = ">=3.11"
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "scikit-learn",
  "scipy",
  "statsmodels",
  "pyyaml",
  "httpx",
  "litellm",
]

[tool.setuptools.packages.find]
where = ["src"]
