[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-coherence"
version = "0.1.0"
description = "Pipeline for LLM preference coherence experiments over parametric ladders."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
dependencies = [
  "matplotlib",
  "numpy>=1.26,<2",
  "pandas>=2.2,<2.3",
  "scikit-learn>=1.4,<1.6",
  "scipy>=1.11,<1.14",
  "statsmodels>=0.14,<0.15",
  "pyyaml",
  "python-dotenv",
  "httpx",
  "litellm",
]

[project.optional-dependencies]
hf-jobs = [
  "huggingface_hub>=1.0,<2",
]

[tool.setuptools.packages.find]
where = ["src"]
